hphp/hack/test/typecheck/strict_switch/union_empty_enum.php.exp
File "union_empty_enum.php", line 15, characters 11-12:
All cases already covered; a redundant `default` case prevents detecting future errors. If your goal is to guard against invalid values for this type, do an `is` check before the switch. (Typing[4022])
  File "union_empty_enum.php", line 16, characters 5-12:
  default declared here
